Gnome: Fix flickering above Chrome URL bar, Fix #201. Fix #195

--- a/gtk-3.20/_drawing.scss
+++ b/gtk-3.20/_drawing.scss
@@ -227,6 +227,7 @@
    // outline-color: transparentize($tc, 0.7);
     background-color: lighten(mix($bg_color, $base_color, 15%), 4%);
     text-shadow: none;
+    border: 1px solid $c;
   }
 
   @else if $t==hover {
